# ESPSTAWithHttpServer

./: .gitignore  CMakeLists.txt  README.md  components  partitions_example.csv  sdkconfig  sdkconfig.backup  sdkconfig.defaults
main/: CMakeLists.txt  audio_convert.c  audio_convert.h  bt_gatts.c  bt_gatts.h  didi_s8_16k_mono.pcm  drv8833_pwm.c  drv8833_pwm.h  gun_s8_16k_mono.pcm  handle_message.c  handle_message.h  io_assignment.h  led_strip.c  led_strip.h  main.c  my_adc.c  my_adc.h  my_gpio.c  my_gpio.h  my_httpd.c  my_httpd.h  my_play_mp3.c  my_play_mp3.h  my_ucp.c  my_ucp.h  my_udp.c  my_udp.h  my_wifi.c  my_wifi.h  sound.c  sound.h  utils.c  utils.h
main/cnv_lib/cnv_audio/: cnv_audio.c  cnv_audio.h
